fix overlap card

--- a/output.css
+++ b/output.css
@@ -288,13 +288,20 @@ body, html {
   width: 100%;
   flex-direction: column-reverse;
   align-items: center;
+  gap: calc(var(--spacing) * 4);
   overflow: hidden;
   border-radius: var(--radius-2xl);
   padding-inline: calc(var(--spacing) * 4);
-  padding-top: calc(var(--spacing) * 6);
+  padding-block: calc(var(--spacing) * 6);
   text-align: center;
+  @media (width >= 640px) {
+    padding-block: calc(var(--spacing) * 8);
+  }
   @media (width >= 1024px) {
     flex-direction: row;
+  }
+  @media (width >= 1024px) {
+    padding-block: calc(var(--spacing) * 11);
   }
   @media (width >= 1024px) {
     text-align: left;
@@ -304,9 +311,6 @@ body, html {
   }
   @media (width >= 1280px) {
     border-radius: 20px;
-  }
-  @media (width >= 1280px) {
-    padding-top: calc(var(--spacing) * 0);
   }
   @media (width >= 1440px) {
     border-radius: 40px;
@@ -405,21 +409,9 @@ body, html {
   max-width: calc(var(--spacing) * 100);
   flex-shrink: 0;
   border-radius: var(--radius-lg);
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
   object-fit: cover;
   @media (width >= 1024px) {
-    margin-top: calc(var(--spacing) * 5);
-  }
-  @media (width >= 1024px) {
     max-width: calc(var(--spacing) * 106);
-  }
-  @media (width >= 1024px) {
-    border-bottom-right-radius: var(--radius-lg);
-    border-bottom-left-radius: var(--radius-lg);
-  }
-  @media (width >= 1920px) {
-    margin-top: calc(var(--spacing) * 11);
   }
 }
 .overlap-container-container {
@@ -434,7 +426,6 @@ body, html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: calc(var(--spacing) * 8);
   @media (width >= 1024px) {
     width: calc(1 / 2 * 100%);
   }
@@ -443,18 +434,6 @@ body, html {
   }
   @media (width >= 1024px) {
     align-items: flex-start;
-  }
-  @media (width >= 1024px) {
-    padding-top: calc(var(--spacing) * 16);
-  }
-  @media (width >= 1024px) {
-    padding-bottom: calc(var(--spacing) * 16);
-  }
-  @media (width >= 1920px) {
-    padding-top: calc(var(--spacing) * 22.25);
-  }
-  @media (width >= 1920px) {
-    padding-bottom: calc(var(--spacing) * 21);
   }
 }
 .card {
